# scope-i18n-lens

./: Cargo.toml  README.md  scope-i18n-lens-design.md
.github/workflows/: auto-version-release.yml  ci.yml  release.yml
crates/intl-lens/: Cargo.toml
crates/intl-lens-extension/: Cargo.toml  extension.toml
crates/intl-lens-extension/src/: lib.rs
crates/intl-lens/src/: backend.rs  config.rs  document.rs  main.rs
crates/intl-lens/src/i18n/: key_finder.rs  locale_resolver.rs  mod.rs  parser.rs  store.rs
docs/superpowers/plans/: 2026-03-30-scope-i18n-lens.md
